deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  namespace: default
  labels:
    app: podinfo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
      - image: lordchou/podinfo:v0.1.3
        imagePullPolicy: Always
        name: podinfo
        resources:
          limits:
            cpu: "1"
            memory: 1024Mi
          requests:
            cpu: 10m
            memory: 128Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 15
