deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: podinfo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: podinfo.perf.lokal
    http:
      paths:
      - path: /
        backend:
          serviceName: podinfo
          servicePort: 80
